Audio didn't work, trying something else

--- a/notebooks/AudioUsage.ipynb
+++ b/notebooks/AudioUsage.ipynb
@@ -258,6 +258,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<audio controls>\n",
+    "  <source src=\"sync5.mp3\" type=\"audio/mpeg\">\n",
+    "Your browser does not support the audio element.\n",
+    "</audio> "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
