Seeing if a README.md will help

--- a/notebooks/AudioUsage.ipynb
+++ b/notebooks/AudioUsage.ipynb
@@ -177,7 +177,7 @@
    "metadata": {},
    "source": [
     "## Audio Example 2\n",
-    "We now show one more example with a 30 second clip from Shubert's Unfinished Symphony (short clip index 5 in the paper corpus)"
+    "We now show one more example with a 45 second clip from Schubert's Unfinished Symphony (short clip index 5 in the paper corpus)"
    ]
   },
   {
@@ -256,23 +256,6 @@
     "linmdtw.save_audio(xsync5[sr*45:sr*90, ::], sr, \"sync5\")\n",
     "ipd.Audio(\"sync5.mp3\")"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<audio controls>\n",
-    "  <source src=\"sync5.mp3\" type=\"audio/mpeg\">\n",
-    "Your browser does not support the audio element.\n",
-    "</audio> "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
