Finishing readme and finalizing docs structure

--- a/notebooks/AudioUsage.ipynb
+++ b/notebooks/AudioUsage.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Aligning Orchestral Music\n",
+    "# Aligning Orchestral Music\n",
     "\n",
     "Below we show how to use this library to align some of the audio used in the paper.  For this notebook to work, we assume the user has installed the audio requirements (<code>pip install -r requirements_audio.txt</code> at the root of the repository). we assume that the user has already downloaded the \"short\" orchestral pieces in the benchmark using the script in <code>experiments/orchestral.py</code>. We do not provide the pieces here for copyright reasons.\n",
     "\n",
@@ -130,7 +130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's now apply the computed warping path to see how the alignment went.  This library wraps arround the pyrubberband library, which we can use to stretch the audio in x1 to match x2, according to this warping path.  The method <code>stretch_audio</code> returns a stereo audio stream with the resulting stretched version of x1 in the left ear and the original version of x2 in the right ear.  Let's save the first 30 seconds of this to disk and listen to it"
+    "Let's now apply the computed warping path to see how the alignment went.  This library wraps arround the pyrubberband library, which we can use to stretch the audio in x1 to match x2, according to this warping path.  The method <code>stretch_audio</code> returns a stereo audio stream with the resulting stretched version of x1 in the left ear and the original version of x2 in the right ear.  Let's save the first 30 seconds of the aligned audio to disk and listen to it"
    ]
   },
   {
@@ -176,8 +176,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Audio Example 2\n",
-    "We now show one more example with a 45 second clip from Schubert's Unfinished Symphony (short clip index 5 in the paper corpus)"
+    "### Audio Example 2: Schubert's Unfinished Symphony\n",
+    "We now show one more example with Schubert's Unfinished Symphony (short clip index 5 in the paper corpus).  We align the entire audio streams (11 minutes, 30 seconds and 12 minutes, 47 seconds, respectively), and we pull out a 45 second clip of the result to listen to."
    ]
   },
   {
