--- a/notebooks/BasicUsage.ipynb
+++ b/notebooks/BasicUsage.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Synthetic Example of DTW And Its Approximations\n",
+    "# Synthetic Example of DTW And Its Approximations\n",
     "\n",
     "Below, we show basic usage of the library by aligning two different parameterizations of a Figure 8 using the core linear memory, divide and conquer technique (linmdtw), as well as two approximate techniques (fastdtw and mrmsdtw).  First, we setup the a Lissajous curve and its re-parameterization, and we plot them colored by their sample index"
    ]
